--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -20,10 +20,6 @@ body,
   }
 }
 
-.spacer {
-  height: 100%;
-}
-
 .bubble-wrap {
   margin: 0 auto;
   display: flex;
@@ -31,7 +27,26 @@ body,
 }
 
 .colors-wrap {
-  height: 100%;
+  height: 50%;
+  width: 300px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+
+  ul {
+    list-style: none;
+    text-align: start;
+
+    li {
+      cursor: pointer;
+      padding: 6px 0;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+    }
+  }
+}
+
+.spacer{
+  height: 50%;
   width: 300px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
